# SnapSort-AI-photo-organizer-using-Visual

./: README.md
SnapSort/: CMakeLists.txt
SnapSort/SnapSort-Cpp/: CMakeLists.txt  album_manager.cpp  album_manager.h  image_processor.cpp  image_processor.h  main.cpp
SnapSort/SnapSort-GUI/SnapSort-GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
